Up and running boys!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <html>
 
   <head>
-    <link rel="stylesheet" href="../CSS/main.css"/>
+    <link rel="stylesheet" href="./CSS/main.css"></link>
+    <script src="./JS/main.js"></script>
+
+    <script>
+      alertUser("You Farted!");
+    </script>
 
     <title> JNutz's Software </title>
 
