Added basic outline

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html>
 
@@ -6,17 +6,20 @@
     <link rel="stylesheet" href="./CSS/main.css"></link>
     <script src="./JS/main.js"></script>
 
-    <script>
-      alertUser("You Farted!");
-    </script>
-
     <title> JNutz's Software </title>
 
   </head>
 
   <body>
+    <header id="mHeader"> JNutz Inc. </header>
 
-    <p id="mP"> This Is My Paragraph </p>
+    <nav id="menu">| Fart | Pee | Poop |</nav>
+
+    <section id="mSection"> This Is My Sextion </section>
+
+    <aside id="mSide"> Hello All! </aside>
+
+    <footer id="mFooter"> Twitter.com/J_Nutz84 - Github.com/J-Nutz - Fart.com/poop </footer>
 
   </body>
 
