Whole buncha work

--- a/index.html
+++ b/index.html
@@ -6,20 +6,37 @@
     <link rel="stylesheet" href="./CSS/main.css"></link>
     <script src="./JS/main.js"></script>
 
+    <script>
+      
+    </script>
+
     <title> JNutz's Software </title>
 
   </head>
 
   <body>
-    <header id="mHeader"> JNutz Inc. </header>
+    <header id="mHeader"> Stuff </header>
 
-    <nav id="menu">| Fart | Pee | Poop |</nav>
+    <nav id="menu">| Website #1 | Website #2 | Website #3 |</nav>
 
-    <section id="mSection"> This Is My Sextion </section>
+    <section id="mSection"> What up killa ? </section>
 
-    <aside id="mSide"> Hello All! </aside>
+    <h3 id="payedText">How Much Did You Pay?</h3>
+    <input id="payed" type="number" name="How Much Did You Pay?">
 
-    <footer id="mFooter"> Twitter.com/J_Nutz84 - Github.com/J-Nutz - Fart.com/poop </footer>
+    <h3 id="recievedText">How Much Did You Recieve?</h3>
+    <input id="recieved" type="number" name="How Much Did You Recieve?">
+
+    <h3 id="givenText">How Much Do You Want To Give?</h3>
+    <input id="given" type="number" name="How Much Do You Want To Give?">
+
+    <input id="submitBtn" type="button" onclick="calculate()" value="Calculate">
+
+    <h3 id="infoDisplay"> hello </h3>
+
+    <aside id="mSide" onclick="change()"> Aside </aside>
+
+    <footer id="mFooter"> Twitter.com - Github.com - Facebook.com </footer>
 
   </body>
 
