--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./JS/main.js"></script>
 
     <script>
-      
+
     </script>
 
     <title> JNutz's Software </title>
@@ -30,11 +30,11 @@
     <h3 id="givenText">How Much Do You Want To Give?</h3>
     <input id="given" type="number" name="How Much Do You Want To Give?">
 
-    <input id="submitBtn" type="button" onclick="calculate()" value="Calculate">
+    <input id="submitBtn" type="button" onclick="getInfo()" value="Calculate">
 
     <h3 id="infoDisplay"> hello </h3>
 
-    <aside id="mSide" onclick="change()"> Aside </aside>
+    <aside id="mSide"> Aside </aside>
 
     <footer id="mFooter"> Twitter.com - Github.com - Facebook.com </footer>
 
